新增V4Fragment兼容 在fragment中使用demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".DefaultActivity" />
         <activity android:name=".DemoActivity"></activity>
+        <activity android:name=".FragmentActivity"/>
     </application>
 
 </manifest>
